<resources>
    <string name="app_name">CP Helper</string>
    <string name="create_array">Create Random Array</string>
    <string name="calculate_xor">Calculate XOR</string>
    <string name="gcd_lcm_calculator">GCD/LCM Calculator</string>
    <string name="binary_representation">Binary Representation</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="array_display">Array will be displayed here (Default Range is -Infinity to +Infinity)</string>
    <string name="sorted">sorted</string>
    <string name="reversed">Reversed</string>
    <string name="size_of_array">Size of Array</string>
    <string name="submit">Submit</string>
    <string name="illegal_values_use_default">Illegal value. Setting default value</string>
    <string name="reversed_array_toast">sorted array will be in decreasing order</string>
    <string name="enter_value">Integer 1</string>
    <string name="enter_xor_value">Integer 2</string>
    <string name="xor">XOR</string>
    <string name="and">AND</string>
    <string name="or">OR</string>
</resources>