<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/arrayView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_min="150dp"
                app:layout_constraintHeight_max="350dp"
                android:autoSizeMinTextSize="20sp"
                android:textIsSelectable="true"
                android:autoSizeTextType="uniform"
                android:paddingHorizontal="10dp"
                android:text="@string/array_display"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/totalValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:importantForAutofill="no"
                android:layout_marginEnd="10dp"
                android:hint="@string/size_of_array"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/arrayView" />

            <EditText
                android:id="@+id/rangeStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginEnd="10dp"
                android:importantForAutofill="no"
                android:hint="@string/from"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toStartOf="@id/rangeEnd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/totalValues" />

            <EditText
                android:id="@+id/rangeEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="10dp"
                android:hint="@string/to"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/rangeStart"
                app:layout_constraintTop_toBottomOf="@+id/totalValues" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/sorted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sorted"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rangeStart" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/reverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reversed"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/sorted"
                app:layout_constraintTop_toTopOf="@id/sorted" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/submit"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>