<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".XorCalculator">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/selections"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/item_view"
        android:divider="?actionBarDivider"
        android:showDividers="middle"
        />

    <LinearLayout
        android:id="@+id/selections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="9"
            android:layout_marginBottom="10dp"
            android:divider="?actionBarDivider"
            android:showDividers="middle"
            >

            <EditText
                android:id="@+id/value"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center"
                android:hint="@string/enter_value"
                android:inputType="numberSigned"
                android:layout_marginHorizontal="5dp"
                android:importantForAutofill="no"
                />
            <EditText
                android:id="@+id/xorValue"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center"
                android:hint="@string/enter_xor_value"
                android:inputType="numberSigned"
                android:layout_marginHorizontal="5dp"
                android:importantForAutofill="no"
                />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginHorizontal="15dp"
                android:text="@string/submit"
                />

        </LinearLayout>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/xor"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/xor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xor"
                android:layout_weight="1"
                />

            <RadioButton
                android:id="@+id/and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:layout_weight="1"
                />

            <RadioButton
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_weight="1"
                />

        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>