<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="?actionBarDivider"
            android:showDividers="middle|end"
            >

            <TextView
                android:id="@+id/createArray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_array"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingVertical="10dp"
                />

            <TextView
                android:id="@+id/xorCalculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_xor"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingVertical="10dp"
                />

            <TextView
                android:id="@+id/BinaryForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/binary_representation"
                android:textSize="22sp"
                android:textStyle="bold"
                android:paddingVertical="10dp"
                />

            <TextView
            android:id="@+id/gcdCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gcd_lcm_calculator"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingVertical="10dp"
            />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>